--- a/osg-ce/osg/01-osg-ce.conf
+++ b/osg-ce/osg/01-osg-ce.conf
@@ -9,5 +9,10 @@
 
 CONDOR_VIEW_HOST = collector1.opensciencegrid.org:9619,collector2.opensciencegrid.org:9619
 
+# Disable GSI warnings (SOFTWARE-5159)
+# Suppress this confusing warning since we don't support GSI authN in
+# the OSG builds of HTCondor
+WARN_ON_GSI_CONFIGURATION = false
+
 OSG_SERIES = 3.6
 SCHEDD_ATTRS = $(SCHEDD_ATTRS) OSG_SERIES
