disable voms via XRD_DISABLE_VOMS env var (SOFTWARE-5106)
git-svn-id: https://vdt.cs.wisc.edu/svn/native/redhat/branches/osg-3.6@27035 4e558342-562e-0410-864c-e07659590f8c

--- a/osg-xrootd/osg/50-osg-http.cfg
+++ b/osg-xrootd/osg/50-osg-http.cfg
@@ -15,6 +15,14 @@ else
    set HttpPort=1094
 fi
 
+if defined ?~XRD_DISABLE_VOMS
+    # pass
+else if named stash-cache-auth
+    set EnableVoms = 1
+else if named stash-origin-auth
+    set EnableVoms = 1
+fi
+
 # Only use HTTP for Stash Cache/Origin because the config necessary for
 # HTTPS enables auth across all protocols
 if defined ?EnableHttp && exec xrootd && named stash-cache
