--- a/ospool-ep-container/osg/ospool-ep-container.cfg
+++ b/ospool-ep-container/osg/ospool-ep-container.cfg
@@ -8,9 +8,6 @@ TOKEN_LOCATION=/etc/osg/ospool-ep-container.tkn
 # (Optional) dedicated volume mount for job I/O. If unset, job I/O will be performed on the same disk as other containers
 WORKER_TEMP_DIR=
 
-# Whether to bind mount CVMFS from the host
-BIND_MOUNT_CVMFS=false
-
 # Whether this container provides NVIDIA GPU resources
 PROVIDE_NVIDIA_GPU=false
 
@@ -28,6 +25,24 @@ GLIDEIN_ResourceName=
 OSG_SQUID_LOCATION=
 
 ################################################################################
+# CVMFS options
+# To use CVMFS, either bind-mount it from the host with BIND_MOUNT_CVMFS
+# or add repos to CVMFSEXEC_REPOS to use cvmfsexec to mount specific repos.
+################################################################################
+
+# Whether to bind mount CVMFS from the host
+BIND_MOUNT_CVMFS=false
+# Space separated list of repos to mount at startup (if using cvmfsexec);
+# leave this blank to disable cvmfsexec
+CVMFSEXEC_REPOS=
+# The proxy to use for CVMFS; leave this blank to use the default
+CVMFS_HTTP_PROXY=
+# The quota limit in MB for CVMFS; leave this blank to use the default
+CVMFS_QUOTA_LIMIT=
+# Set this to true to turn on CVMFSEXEC debugging
+CVMFSEXEC_DEBUG=false
+
+################################################################################
 # Optional OSPool Container Configuration Options
 ################################################################################
 
@@ -39,16 +54,6 @@ GLIDEIN_Start_Extra=
 NUM_CPUS=
 # Amount of memory (in MB) available to jobs
 MEMORY=
-
-# Space separated list of repos to mount at startup (if using cvmfsexec);
-# leave this blank to disable cvmfsexec
-CVMFSEXEC_REPOS=
-# The proxy to use for CVMFS; leave this blank to use the default
-CVMFS_HTTP_PROXY=
-# The quota limit in MB for CVMFS; leave this blank to use the default
-CVMFS_QUOTA_LIMIT=
-# Set this to true to turn on CVMFSEXEC debugging
-CVMFSEXEC_DEBUG=false
 
 # How many hours to accept new jobs for
 ACCEPT_JOBS_FOR_HOURS=62
