--- a/ospool-ep-container/osg/ospool-ep-container.cfg
+++ b/ospool-ep-container/osg/ospool-ep-container.cfg
@@ -71,6 +71,10 @@ GLIDEIN_Start_Extra=
 # Allow CPU jobs on GPU slots if there are GPUs left
 ALLOW_CPUJOB_ON_GPUSLOT=false
 
+################################################################################
+# Development and advanced options
+################################################################################
+
 # Use the prepare-job-hook to run Singularity jobs
 CONTAINER_PILOT_USE_JOB_HOOK=true
 
