Put options that restrict which jobs are run into its own section

--- a/ospool-ep-container/osg/ospool-ep-container.cfg
+++ b/ospool-ep-container/osg/ospool-ep-container.cfg
@@ -59,11 +59,15 @@ ACCEPT_IDLE_MINUTES=30
 # HTTP address of the Squid instance used by the glidein
 OSG_SQUID_LOCATION=
 
-# Set this to restrict this pilot to only run jobs from a specific Project
-OSG_PROJECT_NAME=
-
 # Additional paths to bind for Singularity jobs; same syntax as the -B option in singularity run
 SINGULARITY_BIND_EXTRA=
+
+################################################################################
+# Options restricting which jobs to run
+################################################################################
+
+# Set this to restrict this pilot to only run jobs from a specific Project
+OSG_PROJECT_NAME=
 
 # Additional restrictions for your START expression
 GLIDEIN_Start_Extra=
